# lasanga

./: .gitignore  CMakeLists.txt  README.md  sandbox.cpp  sb_builder.cpp  sb_iteration.cpp
examples/: CMakeLists.txt  builder_talk.cpp  deep_composition.cpp  generic_talk.h  override.cpp  override_get.cpp  override_invoke.cpp
include/lasanga/: builder.h  custom_override.h  designated_factory.h  get_alias_list.h  lasanga.h  layer.h  tags.h  traits.h  utility.h
include/lasanga/generic/: builder.h  construct_tree.h  lasanga.h  resolve_generic_class.h  specialize_tree.h  traits.h
include/lasanga/impl/: builder.h  builder.hpp  builder.ipp  resolve_generic_class.h
include/lasanga/utility/: apply_predicates.h  builder_impl.h  construct_tree.h  convert_type_list.h  filter_type_list.h  map_type_list.h  resolve_factory.h  specialize.h  specialize_tree.h  traits.h  tree_node.h  type_tree.h
sandbox/: CMakeLists.txt  sandbox.cpp  sb_builder.cpp  sb_iteration.cpp  sb_type_tree.cpp
tests/: CMakeLists.txt  apply_predicates.cpp  filter_type_list.cpp  map_type_list.cpp  resolve_factory.cpp  resolve_generic_class.cpp  resolve_name_list.cpp
